Fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -67,12 +67,87 @@ nav a{
     }
 }
 
+.sp-card-group{
+    width: 100%;
+}
+
+@media only screen and (max-width: 720px) {
+    .sp-card-group{
+        align-self: center;
+        width: 430px;
+    }
+}
+
 @media only screen and (max-width: 670px) {
     .sp-home-card-section{
         width: 430px;
         height: 450px;
     }
+
+    .sp-home-card-section #resume-button{
+        padding: 4px 12px !important;
+    }
 }
+
+@media only screen and (max-width: 600px) {
+    .sp-home-card-section{
+        width: 370px;
+        height: 420px;
+    }
+
+    .sp-home-card-section img{
+        scale: 0.8;
+    }
+
+    .sp-home-card-section h1{
+        font-size: 2.8rem;
+    }
+
+    .sp-home-card-section p{
+        font-size: 1.2rem;
+    }
+
+    .sp-card-group{
+        width: 370px;
+    }
+    
+    #sp-contact-card{
+        width: 370px;
+    }
+}
+
+@media only screen and (max-width: 460px) {
+    .sp-home-card-section{
+        width: 330px;
+        height: 420px;
+    }
+
+    .sp-home-card-section #resume-button{
+        padding: 4px 20px !important;
+    }
+
+    .sp-home-card-section #contact-button{
+        padding: 4px 20px !important;
+    }
+
+    .sp-home-card-section h1{
+        font-size: 2.5rem;
+    }
+
+    .sp-home-card-section p{
+        font-size: 1.0rem;
+    }
+
+    .sp-card-group{
+        width: 350px;
+    }
+
+    #sp-contacts-group{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 
 .sp-back-card-red{
     position: absolute;
@@ -177,7 +252,7 @@ button, .sp-link-button{
 }
 
 .sp-card-info{
-    max-width: 700px;
+    max-width: 750px;
     min-height: fit-content;
 
     padding: 16px;
